2025-10-12T01:20:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18437216194 # 794
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-12
* notice: last 14d: unq all: 6 15
* notice: prev accum: outdated-unq outdated-all / unq all: 1120 1600 / 1135 1615
* notice: next accum: outdated-unq outdated-all / unq all: 1120 1600 / 1136 1616
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-28 2025-10-11]

2025-10-11T01:13:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18422187317 # 793
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-11
* notice: last 14d: unq all: 6 15
* notice: prev accum: outdated-unq outdated-all / unq all: 1119 1599 / 1135 1615
* notice: next accum: outdated-unq outdated-all / unq all: 1120 1600 / 1135 1615
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-27] / []

2025-10-10T01:16:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18393555889 # 792
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-10
* notice: last 14d: unq all: 6 16
* notice: prev accum: outdated-unq outdated-all / unq all: 1118 1598 / 1132 1612
* notice: next accum: outdated-unq outdated-all / unq all: 1119 1599 / 1135 1615
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-26] / [2025-10-09 2025-10-10]

2025-10-09T01:16:33Z: