@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2025-10-12T01:20:05Z",
-  "count_outdated" : 1600,
-  "uniques_outdated" : 1120,
-  "count" : 1616,
-  "uniques" : 1136,
+  "timestamp" : "2025-10-13T01:21:27Z",
+  "count_outdated" : 1603,
+  "uniques_outdated" : 1123,
+  "count" : 1617,
+  "uniques" : 1137,
   "clones" : [
-    {
-      "timestamp": "2025-09-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2025-09-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-30T00:00:00Z",
       "count": 1,
@@ -115,6 +97,15 @@
     },
     {
       "timestamp": "2025-10-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
