@@ -1,17 +1,7 @@
 {
-  "count": 15,
-  "uniques": 6,
+  "count": 14,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2025-09-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-09-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-09-30T00:00:00Z",
       "count": 1,
@@ -64,6 +54,11 @@
     },
     {
       "timestamp": "2025-10-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-12T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
